# derm

./: .env.example  .gitignore  ANTHROPIC_SETUP.md  CDEK_SETUP.md  COSTS.md  Caddyfile  Caddyfile.files  DEPLOY.md  DOMAIN_SETUP.md  Dockerfile  Dockerfile.caddy  README.md  ROADMAP.md  SMS_SETUP.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  vercel.json  ПАМЯТКА.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-railway.yml  deploy-vercel.yml  deploy-vps.yml  nightly.yml
api/: index.py
app/: __init__.py  aitest.py  cli.py  config.py  main.py  schemas.py
app/admin/: __init__.py  api.py
app/analysis/: __init__.py  engine.py  mock.py  prompts.py
app/api/: __init__.py  auth.py  plans.py  v1.py
app/assistant/: __init__.py  api.py  engine.py
app/auth/: __init__.py  api.py  deps.py  service.py  sms.py
app/automation/: __init__.py  scheduler.py  service.py
app/billing/: __init__.py  api.py  payments.py  service.py
app/captcha/: __init__.py  api.py  service.py
app/db/: __init__.py  store.py
app/lab/: api.py  (+3 more)
mobile/: .gitignore  README.md  settings.gradle.kts
scripts/: backup.sh  caddy-entrypoint.sh  setup-autodeploy.sh  tunnel.sh  update.sh  vps-bootstrap.sh
sdk/: README.md  embed-example.html
tests/: conftest.py  test_api.py  test_aura.py  test_auth.py  test_auth_sms.py  test_automation.py  test_billing.py  test_captcha_profile.py  test_delivery.py  test_engine.py  test_food.py  test_lab.py  test_otp_delivery.py  test_plans.py  test_protocol.py  test_shop.py  test_subscription.py  test_tgbot.py  test_tracker.py
(+70 files in other folders)
