[project]
name = "derm"
version = "0.1.0"
description = "AI-анализ кожи: B2B API, веб-демо, персональные протоколы и AI-трекер"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
derm = "app.cli:main"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
